--- a/css/style.css
+++ b/css/style.css
@@ -65,4 +65,13 @@ nav a {margin: 55px;
 
 }
 
+img {
+    border-radius: 35%;
+}
+
+h1 {
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
 </style>
