--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,11 @@ nav a {margin: 55px;
 
 }
 
-img {
+img#header-image {
     border-radius: 35%;
-}
+    box-shadow: 10px 10px 5px grey;
+    }
+
 
 h1 {
     color: white;
