--- a/css/style.css
+++ b/css/style.css
@@ -76,15 +76,15 @@ h1 {
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
 .button {
-    background-color: #4CAF50;
+    background-color:black;
     border: none;
-    color: white;
-    padding: 15px 32px;
+    color: yellow;
+    padding: 1px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 20px;
+    margin: 3px 2px;
     cursor: pointer;
 
 </style>
