--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h1 {
     margin: 3px 2px;
     cursor: pointer;
 }
-.highlighted{
+/* .highlighted{
   background-color: blue;
   width: 20%;
 }
@@ -101,5 +101,5 @@ h1 {
 }
 ul{
   width:650px;
-}
+} */
   </style>
